vlib/v/checker/tests/match_expr_empty_branch.out
vlib/v/checker/tests/match_expr_empty_branch.vv:3:2: error: `match` expression requires an expression as the last statement of every branch
    1 | _ := match true {
    2 |     true { 0 }
    3 |     false {}
      |     ~~~~~~~~
    4 | }
